fix safari day/night alignment issue

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -146,7 +146,7 @@
   }
 }
 
-#daynite { visibility: hidden; margin: 6px 0 0 8px; }
+#daynite { visibility: hidden; margin: 6px 0 0 4px; padding-left:4px;}
 
 #discord-frame { float: right; margin-left: 1em; }
 .home-discord { width: 350px; margin: 0 auto; text-align: center; }
